<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        android:id="@+id/constrain_logo"
        tools:context=".ui.activities.Logo" android:fadingEdge="horizontal|vertical">

    <TextView
            android:text="@string/app_name"
            android:textSize="42sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="144dp"
            android:fontFamily="@font/holtwood_one_sc" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <ImageView
            app:srcCompat="@mipmap/ic_launcher_foreground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="108dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:contentDescription="@string/logo"
            app:layout_constraintHorizontal_bias="0.498"/>

    <TextView
            android:text="@string/toca_para_empezar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_logo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/holtwood_one_sc"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="86dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>