<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constrain_crear_nota"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.activities.CrearNota">


    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cardView"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
            <ImageView
                    android:id="@+id/iv_color"
                    app:srcCompat="@drawable/ic_palette_black_24dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/boton_color"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                    android:id="@+id/iv_tag"
                    app:srcCompat="@drawable/ic_tag"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/boton_color"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.454"
                    app:layout_constraintStart_toEndOf="@+id/iv_color" android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:ems="10"
            android:hint="@string/titulo"
            android:maxLength="20"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@drawable/color"
            android:background="@drawable/edittext_rounded"
            android:id="@+id/et_titulo" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:importantForAutofill="no" tools:targetApi="o"
            android:paddingLeft="8dp" android:layout_marginBottom="651dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/et_content_nota" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/edittext_rounded"
            android:maxLength="250"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="12dp"
            android:textColor="@drawable/color"
            android:autoLink="web"
            android:inputType="textCapSentences|textMultiLine"
            android:importantForAutofill="no" tools:targetApi="o" android:hint="@string/escribe_tu_nota"
            android:gravity="top" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
            android:singleLine="false"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/et_titulo"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_crear_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_save_black_24dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            android:textStyle="italic"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@+id/et_content_nota" android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp" app:layout_constraintEnd_toEndOf="@+id/et_content_nota"/>

</android.support.constraint.ConstraintLayout>